--- a/19_ThemeClock/styles.css
+++ b/19_ThemeClock/styles.css
@@ -84,11 +84,11 @@ body {
 .needle.second {
   transform: translate(-50%, -100%) rotate(0deg);
   height: 100px;
-  background-color: #e74c3c;
+  background-color: #ff5af1;
 }
 
 .center-point {
-  background-color: #e74c3c;
+  background-color: #ff5af1;
   width: 10px;
   height: 10px;
   position: absolute;
